--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-i18n",
+  "name": "@troila/react-native-i18n",
   "version": "2.0.15",
   "description": "Provide I18n to your React Native application",
   "license": "MIT",
@@ -7,7 +7,7 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "github.com/AlexanderZaytsev/react-native-i18n.git"
+    "url": "github.com/troila-lobo/react-native-i18n.git"
   },
   "keywords": [
     "react-native",
